[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boundary-proximity"
version = "0.1.0"
description = "Reliability graded boundary proximity workflow for local nonstationary ore grade modelling."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Zhiyuan Wu"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10"
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]
